--- a/index.html
+++ b/index.html
@@ -5,244 +5,188 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MyResume</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-
-      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@700&amp;display=swap"
-
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@700&amp;display=swap"
       rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/lightbox.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&amp;display=swap"
-
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&amp;display=swap"
       rel="stylesheet">
   </head>
   <body>
+    <div class="row font"> <a href="#about" id="back"> </a>
+      <nav class="navbar navbar-expand-lg " style="background-color: #F1EFEB;"><a
+          href="#about" id="back"> </a>
+        <div class="container-fluid"><a href="#about" id="back"> <b> </b></a><b><a
+              class="navbar-brand" href="#">RESUME</a></b> <button class="navbar-toggler"
+            type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span
+              class="navbar-toggler-icon"></span> </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item"> <a class="nav-link active" aria-current="page"
+                  href="#">Home</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="#about">About</a>
+              </li>
+              <li class="nav-item"> <a class="nav-link" href="#info">Info</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="mailto:norasing_n@silpakorn.edu"
+                  target="_blank">Contact</a> </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
     <div class="container">
-      <div class="row px-3 font"> <a href="#about" id="back"> </a>
-        <nav class="navbar navbar-expand-lg " style="background-color: #F1EFEB;"><a
-
-            href="#about" id="back"> </a>
-          <div class="container-fluid"><a href="#about" id="back"> <b> </b></a><b><a
-
-                class="navbar-brand" href="#">RESUME</a></b> <button class="navbar-toggler"
-
-              type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span
-
-                class="navbar-toggler-icon"></span> </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item"> <a class="nav-link active" aria-current="page"
-
-                    href="#">Home</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#about">About</a>
-                </li>
-                <li class="nav-item"> <a class="nav-link" href="#info">Info</a>
-                </li>
-                <li class="nav-item"> <a class="nav-link" href="mailto:norasing_n@silpakorn.edu"
-
-                    target="_blank">Contact</a> </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
       <div class="row px-0 mb-1 mx-0">
-        <div class="col-8" style="text-align: center;">
-          <h2><br>
-          </h2>
-          <h2><br>
-          </h2>
-          <h2 class="menu"> <span style="color: white;">HI, I'M NAPAT<br>
-              こんにちは、ナパットです。</span> </h2>
-          <a href="#about"><button type="button" class="btn btn-light button">About
-              me</button></a>
-          <h2> </h2>
+        <div class="col-8" style="text-align: center;"> <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <h3 class="menu pt-5"><span style="color: white;">HI, I'M NAPAT<br>
+              こんにちは、ナパットです。</span> </h3>
+          <a href="#about"><button type="button" class="btn btn-light button mb-5">About
+
+              me</button></a> </div>
+      </div>
+      <div class="row m-5 plswork"> . </div>
+      <div class="row m-5 plswork"> . </div>
+      <div class="row m-4 plswork"> . </div>
+      <div class="row mt-5 pt-5 ">
+        <div class="col-md-3"> </div>
+        <div class="col-md-6 px-4">
+          <h1 style="text-align: center;"><a id="about">ABOUT ME</a></h1>
+          <br>
+          <p style="text-align: center;">
+            ดิฉันอยากจะทำงานในบริษัทที่ได้ใช้ความสามารถทางด้านภาษาญี่ปุ่นที่ฉันมีให้เกิด
+            ประโยชน์ได้อย่างเต็มที่ที่สุดและคาดหวังว่าการได้เข้าทำงาน
+            กับบริษัทของคุณจะทำให้ดิฉันได้เรียนรู้เกี่ยวกับทักษะและได้รับ
+            ประสบการณ์ในการทำ
+            งานด้านการแปลหนังสือจากบุคลากรมากประสบการณ์ในองค์กรและนำความรู้เหล่า
+            นั้นมา
+            ประยุกต์ใช้ในการทำงานแปลที่มีคุณภาพมากที่สุดออกมาเพื่อให้ผู้อ่านสามารถอ่านได้
+            อย่างเพลิดเพลิน </p>
         </div>
-        <div> </div>
-      </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <div class="row mt-5 pt-5 ">
-      <div class="col-md-3"> </div>
-      <div class="col-md-6">
-        <h1 style="text-align: center;"><a id="about">ABOUT ME</a></h1>
-        <p style="text-align: center;">
-          ดิฉันอยากจะทำงานในบริษัทที่ได้ใช้ความสามารถทางด้านภาษาญี่ปุ่นที่ฉันมีให้เกิด
-          ประโยชน์ได้อย่างเต็มที่ที่สุดและคาดหวังว่าการได้เข้าทำงาน
-          กับบริษัทของคุณจะทำให้ดิฉันได้เรียนรู้เกี่ยวกับทักษะและได้รับ
-          ประสบการณ์ในการทำ
-          งานด้านการแปลหนังสือจากบุคลากรมากประสบการณ์ในองค์กรและนำความรู้เหล่า
-          นั้นมา
-          ประยุกต์ใช้ในการทำงานแปลที่มีคุณภาพมากที่สุดออกมาเพื่อให้ผู้อ่านสามารถอ่านได้
-          อย่างเพลิดเพลิน </p>
-      </div>
-      <div class="col-md-3"> </div>
-    </div>
-    <br>
-    <div class="row">
-      <div style="text-align: center;"> <img src="images/102B2C47-F047-4A99-A111-71ADC4A01D37.png"
-
-          class="img-fluid" alt="book" style="width: 376px; height: 249px;"></div>
-    </div>
-    <br>
-    <br>
-    <div class="container"><br>
-    </div>
-    <div class="container"><br>
-      
-      <br>
-      <br>
-      <div class="row info p-5 cream"> <a id="info">123</a></div>
-      <div class="row mt-10 info" style="text-align: center;">
-        <h1>MY INFORMATION</h1>
-      </div>
-      <div class="row info mt-0 px-5 pt-2 " style="text-align: center;">
-        <div class="col-4"><a id="PERSONAL INFORMATION"> </a><a href="#personal"><img
-
-              src="images/DE24A029-4030-4F57-91DC-E3AE488CD130.png" class="img-fluid"
-
-              alt="personal"></a></div>
-        <div class="col-4"><a href="#educational"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%281%29.png"
-
-              class="img-fluid" alt="educational"></a></div>
-        <div class="col-4"><a href="#skills"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%282%29.png"
-
-              class="img-fluid" alt="skills"></a></div>
-      </div>
-      <div class="row info p-5 cream"> 123 </div>
-      <br>
-      <br>
-      <div class="row mt-5" style="text-align: center;"> <a id="personal">
-          <p><img src="images/87590B14-8FF7-45AA-8951-2AE8CF24456B.png" class="rounded-circle"
-
-              alt="imgme" style="width: 188px; height: 181px;"></p>
-        </a> </div>
-      <div class="row" style="text-align: center;">
-        <h1>PERSONAL INFORMATION</h1>
-      </div>
-      <div class="row" style="text-align: center;">
-        <p> ชื่อจริง ณภัทร นรสิงห์<br>
-          ชื่อเล่น นัม<br>
-          เกิดวันที่ 5 สิงหาคม 2545<br>
-          อายุ 21 ปี<br>
-          หมู่โลหิต B<br>
-          สัญชาติ/เชื้อชาติ ไทย<br>
-          ศาสนา พุทธ<br>
-          MBTI INFP<br>
-          คติประจำใจ จงทำทุกอย่างด้วยความสุข<br>
-          เบอร์โทรศัพท์ 095-831-0852<br>
-          E-mail Norasing_n@silpakorn.edu </p>
-      </div>
-      <br>
-      <br>
-      <a id="educational"> </a><br>
-      <div class="row m-0 pt-5 info" style="text-align: center;">
-        <h1> EDUCATION HISTORY </h1>
-      </div>
-      <div class="row m-0 pb-5 pt-2 px-5 info" style="text-align: center;">
-        <table class="table table-bordered" style="color: #5b5247;">
-          <thead>
-            <tr style="text-align: center;">
-              <th scope="col">วุฒิการศึกษา</th>
-              <th scope="col">สถานศึกษา</th>
-              <th scope="col">ปีการศึกษา</th>
-            </tr>
-          </thead>
-          <tbody class="table-group-divider">
-            <tr>
-              <td>ระดับปริญญาตรี</td>
-              <td>มหาวิทยาลัยศิลปากร</td>
-              <td>2564-2568</td>
-            </tr>
-            <tr>
-              <td>ระดับมัธยมศึกษา</td>
-              <td>โรงเรียนสวนกุหลาบวิทยาลัย ชลบุรี</td>
-              <td>2558-2563</td>
-            </tr>
-            <tr>
-              <td>ระดับประถมศึกษา</td>
-              <td>โรงเรียนอนุบาลปทุมธานี</td>
-              <td>2552-2557</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <br>
-      <br>
-      <div class="row">
-        <div id="carouselExample" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="carousel-item active"> <a id="skills"><img src="images/skillsjapannew.jpg"
-
-                  class="d-block w-100" alt="skills"></a> </div>
-            <div class="carousel-item"> <img src="images/skillsothernew.jpg" class="d-block w-100"
-
-                alt="skills2"> </div>
+        <div class="row my-5">
+          <div style="text-align: center;"> <img src="images/102B2C47-F047-4A99-A111-71ADC4A01D37.png"
+              class="img-fluid" alt="book" style="width: 376px; height: 249px;"></div>
+        </div>
+        <div class="row m-5 plswork"> . </div>
+        <div class="row pt-5 pb-4 info" style="text-align: center;">
+          <h1>MY INFORMATION</h1>
+        </div>
+        <div class="row info mt-0 md-5 px-5 pt-5 pb-5" style="text-align: center;">
+          <div class="col-md-4 my-1"><a id="PERSONAL INFORMATION"> </a><a href="#personal"><img
+                src="images/DE24A029-4030-4F57-91DC-E3AE488CD130.png" class="img-fluid"
+                alt="personal"></a></div>
+          <div class="col-md-4 my-2"><a href="#educational"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%281%29.png"
+                class="img-fluid" alt="educational"></a></div>
+          <div class="col-md-4 my-1"><a href="#skills"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%282%29.png"
+                class="img-fluid" alt="skills"></a></div>
+        </div>
+        <br>
+        <br>
+        <div class="row mt-5" style="text-align: center;"> <a id="personal">
+            <p><img src="images/87590B14-8FF7-45AA-8951-2AE8CF24456B.png" class="rounded-circle"
+                alt="imgme" style="width: 188px; height: 181px;"></p>
+          </a> </div>
+        <div class="row" style="text-align: center;">
+          <h1>PERSONAL INFORMATION</h1>
+        </div>
+        <br>
+        <div class="row mb-3" style="text-align: center;">
+          <p> ชื่อจริง ณภัทร นรสิงห์<br>
+            ชื่อเล่น นัม<br>
+            เกิดวันที่ 5 สิงหาคม 2545<br>
+            อายุ 21 ปี<br>
+            หมู่โลหิต B<br>
+            สัญชาติ/เชื้อชาติ ไทย<br>
+            ศาสนา พุทธ<br>
+            MBTI INFP<br>
+            คติประจำใจ จงทำทุกอย่างด้วยความสุข<br>
+            เบอร์โทรศัพท์ 095-831-0852<br>
+            E-mail Norasing_n@silpakorn.edu </p>
+        </div>
+        <a id="educational"> </a><br>
+        <div class="row m-0 pt-5 info" style="text-align: center;">
+          <h1> EDUCATION HISTORY </h1>
+        </div>
+        <div class="row m-0 pb-5 pt-2 px-5 info" style="text-align: center;">
+          <table class="table table-bordered" style="color: #5b5247;">
+            <thead>
+              <tr style="text-align: center;">
+                <th scope="col">วุฒิการศึกษา</th>
+                <th scope="col">สถานศึกษา</th>
+                <th scope="col">ปีการศึกษา</th>
+              </tr>
+            </thead>
+            <tbody class="table-group-divider">
+              <tr>
+                <td>ระดับปริญญาตรี</td>
+                <td>มหาวิทยาลัยศิลปากร</td>
+                <td>2564-2568</td>
+              </tr>
+              <tr>
+                <td>ระดับมัธยมศึกษา</td>
+                <td>โรงเรียนสวนกุหลาบวิทยาลัย ชลบุรี</td>
+                <td>2558-2563</td>
+              </tr>
+              <tr>
+                <td>ระดับประถมศึกษา</td>
+                <td>โรงเรียนอนุบาลปทุมธานี</td>
+                <td>2552-2557</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <br>
+        <br>
+        <div class="row my-5">
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active"> <a id="skills"><img src="images/skills01.png"
+                    class="d-block w-100" alt="skills"></a> </div>
+              <div class="carousel-item"> <img src="images/skills02.png" class="d-block w-100"
+                  alt="skills2"> </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+              data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span> </button> <button
+              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+              data-bs-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span> </button> </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="row my-3" style="text-align: center;"> <a href="#back"><button
+              type="button" class="btn btn-light button mb-5">Back to top</button></a>
+        </div>
+        <div class="row pt-4 ps-5 footer" style="text-align: center;">
+          <div class="col md-4 xs-1" style="text-align: right;"><a href="https://youtube.com/@bbyproduction7582?si=kw6jf6k4a2b3ab2a"
+              target="_blank"><img src="images/social01.png" class="img-fluid circle"
+                alt="youtube"></a></div>
+          <div class="col md-4 xs-1 mx-3"><a href="https://www.facebook.com/numnumzung"
+              target="_blank"><img src="images/social03.png" class="img-fluid circle"
+                alt="facebook"></a></div>
+          <div class="col md-4 xs-1" style="text-align: left;"><a href="https://instagram.com/naninunenorrr?igshid=YTQwZjQ0NmI0OA=="
+              target="_blank"><img src="images/social02.png" class="img-fluid circle"
+                alt="instagram"></a></div>
+          <address> </address>
+          <address> </address>
+          <div class="col word">
+            <h6 style="   text-align: center;"> TEL. 095-831-0852</h6>
+            <h6> </h6>
+            <h6 style="   text-align: center;"> E-MAIL Norasing_n@silpakorn.edu
+            </h6>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-
-            data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span> </button> <button class="carousel-control-next"
-
-            type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span> </button> </div>
-      </div>
-      <br>
-      <br>
-      <br>
-      <div class="row" style="text-align: center;">
-        <p> <a href="#back"><u>[BACK TO TOP]</u></a> </p>
-      </div>
-      <div class="row pt-4 ps-5 footer">
-        <div class="col-1"><a href="https://youtube.com/@bbyproduction7582?si=kw6jf6k4a2b3ab2a"
-
-            target="_blank"><img src="images/youtube.jpg" class="img-fluid circle"
-
-              alt="youtube"></a></div>
-        <div class="col-1 mx-3"><a href="https://www.facebook.com/numnumzung" target="_blank"><img
-
-              src="images/facebook.jpg" class="img-fluid circle" alt="facebook"></a></div>
-        <div class="col-1"><a href="https://instagram.com/naninunenorrr?igshid=YTQwZjQ0NmI0OA=="
-
-            target="_blank"><img src="images/instagram.jpg" class="img-fluid circle"
-
-              alt="instagram"></a></div>
-        <address> </address>
-        <address> </address>
-        <div class="col word highlight">
-          <h6> TEL. 095-831-0852</h6>
-          <h6> </h6>
-          <h6> </h6>
-          <h6> </h6>
-          <h6> LINE haminenamugum</h6>
-          <h6> </h6>
-          <h6> </h6>
-          <h6> </h6>
-          <h6> E-MAIL Norasing_n@silpakorn.edu </h6>
         </div>
       </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
-    <script src="js/lightbox-plus-jquery.min.js"></script>
+      <script src="js/lightbox-plus-jquery.min.js"></script> </div>
   </body>
 </html>
