--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume for a Japanese book translation[นักแปลหนังสือภาษาญี่ปุ่น]</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-
-      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@700&amp;display=swap"
-
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@700&amp;display=swap"
       rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/lightbox.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&amp;display=swap"
-
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&amp;display=swap"
       rel="stylesheet">
     <meta name="description" content="ฉันต้องการสมัครงานในตำแหน่งนักแปลหนังสือภาษาญี่ปุ่น เว็บไซต์นี้จะประกอบไปด้วยข้อมูลต่างๆเกี่ยวกับข้อมูลส่วนตัวของฉันให้ท่านได้รู้จักฉันมากขึ้นรวมถึงความสารถและทักษะทางภาษาญี่ปุ่นของฉัน เพื่อเป็นแนวทางให้ทุกท่านพิจารณาและตัดสินใจในการรับฉันเข้าไปเป็นนักแปลหนังสือภาษาญี่ปุ่นในองค์กรของคุณ">
     <meta name="keywords" content="นักแปลหนังสือภาษาญี่ปุ่น, สมัครงาน, Japanese book translation, book translator, นักแปลหนังสือ, ภาษาญี่ปุ่น">
@@ -24,29 +20,22 @@
   <body>
     <div class="row font">
       <div class="fixed-top">
-        <nav class="navbar navbar-expand-lg " style="background-color: #F1EFEB;"><a
-
+        <nav class="navbar navbar-expand-lg " style="background-color: #F1EFEB;"><a
             href="#about" id="back"> </a>
-          <div class="container-fluid"><a href="#about" id="back"> <b> </b></a><b><a
-
-                class="navbar-brand" href="#">RESUME</a></b> <button class="navbar-toggler"
-
-              type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span
-
+          <div class="container-fluid"><a href="#about" id="back"> <b> </b></a><b><a
+                class="navbar-brand" href="#">RESUME</a></b> <button class="navbar-toggler"
+              type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item"> <a class="nav-link active" aria-current="page"
-
+                <li class="nav-item"> <a class="nav-link active" aria-current="page"
                     href="#">Home</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item"> <a class="nav-link" href="#info">Info</a>
                 </li>
-                <li class="nav-item"> <a class="nav-link" href="mailto:norasing_n@silpakorn.edu"
-
+                <li class="nav-item"> <a class="nav-link" href="mailto:norasing_n@silpakorn.edu"
                     target="_blank">Contact</a> </li>
               </ul>
             </div>
@@ -95,14 +84,13 @@
             การได้เป็นนักแปลหนังสือที่ต้องอาศัยทั้งความรู้และความเข้าใจทางด้านภาษาญี่ปุ่น
             เป็นอย่างมากจึงเป็นอาชีพที่ตอบโจทย์ที่สุด
             และดิฉันก็คาดหวังว่าการได้เข้าทำงานกับบริษัทของคุณจะทำให้ดิฉันได้เรียนรู้เกี่ยว
-            กับทักษะและได้รับประสบการณ์ในการทำงานด้านการแปลหนังสือจากบุคลากรมาก
-            ประสบการณ์ในองค์กรและนำความรู้เหล่า
+            กับทักษะการแปลหนังสือภาษาญี่ปุ่นและได้รับประสบการณ์ในการทำงานด้านการ
+            แปลหนังสือจากบุคลากรมากประสบการณ์ในองค์กรและนำความรู้เหล่า
             นั้นมาประยุกต์ใช้ในการทำงานแปลที่มีคุณภาพมากที่สุดออกมาเพื่อให้ผู้อ่านสามารถอ่าน
-            ได้ อย่างเพลิดเพลิน </p>
+            ได้อย่างเพลิดเพลิน </p>
         </div>
         <div class="row my-5">
-          <div style="text-align: center;"> <img src="images/102B2C47-F047-4A99-A111-71ADC4A01D37.png"
-
+          <div style="text-align: center;"> <img src="images/102B2C47-F047-4A99-A111-71ADC4A01D37.png"
               class="img-fluid" alt="book" style="width: 376px; height: 249px;"></div>
         </div>
         <div class="row m-5 plswork"> . </div>
@@ -110,23 +98,18 @@
           <h1 class="head">MY INFOR<a name="info" id="info"></a>MATION</h1>
         </div>
         <div class="row info mt-0 md-5 px-5 pt-5 pb-5" style="text-align: center;">
-          <div class="col-md-4 my-1"><a id="PERSONAL INFORMATION"> </a><a href="#personal"><img
-
-                src="images/DE24A029-4030-4F57-91DC-E3AE488CD130.png" class="img-fluid"
-
+          <div class="col-md-4 my-1"><a id="PERSONAL INFORMATION"> </a><a href="#personal"><img
+                src="images/DE24A029-4030-4F57-91DC-E3AE488CD130.png" class="img-fluid"
                 alt="personal"></a></div>
-          <div class="col-md-4 my-2"><a href="#educational"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%281%29.png"
-
+          <div class="col-md-4 my-2"><a href="#educational"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%281%29.png"
                 class="img-fluid" alt="educational"></a></div>
-          <div class="col-md-4 my-1"><a href="#skills"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%282%29.png"
-
+          <div class="col-md-4 my-1"><a href="#skills"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%282%29.png"
                 class="img-fluid" alt="skills"></a></div>
         </div>
         <br>
         <br>
         <div class="row mt-5" style="text-align: center;"> <a id="personal">
-            <p><img src="images/87590B14-8FF7-45AA-8951-2AE8CF24456B.png" class="rounded-circle"
-
+            <p><img src="images/87590B14-8FF7-45AA-8951-2AE8CF24456B.png" class="rounded-circle"
                 alt="imgme" style="width: 188px; height: 181px;"></p>
           </a> </div>
         <div class="row" style="text-align: center;">
@@ -178,47 +161,37 @@
             </tbody>
           </table>
           <div class="mt-2 head">
-            <!-- Button trigger modal --><button type="button" class="btn btn-light"
-
+            <!-- Button trigger modal --><button type="button" class="btn btn-light"
               data-bs-toggle="modal" data-bs-target="#exampleModal">
               ผลการสอบวัดระดับภาษา JLPT และ ผลงานการแปล </button><!-- Modal --></div>
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">
-                    ผลการสอบ และ ผลงาน </h1>
+                  <h1 class="modal-title fs-5" id="exampleModalLabel"> ผลการสอบ
+                    และ ผลงาน </h1>
                   <br>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal"
-
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"
                     aria-label="Close"></button> </div>
                 <div class="modal-body">
-                  <div id="carouselExampleControlsNoTouching" class="carousel slide"
-
+                  <div id="carouselExampleControlsNoTouching" class="carousel slide"
                     data-bs-touch="false">
                     <div class="carousel-inner">
-                      <div class="carousel-item active"> <img src="images/2.jpg"
-
+                      <div class="carousel-item active"> <img src="images/2.jpg"
                           class="img-fluid" alt="ผลสอบวัดระดับภาษา"> </div>
-                      <div class="carousel-item"> <img src="images/1.jpg" class="img-fluid"
-
+                      <div class="carousel-item"> <img src="images/1.jpg" class="img-fluid"
                           alt="ผลงาน"> </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-
-                      data-bs-slide="prev"> <span class="carousel-control-prev-icon"
-
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+                      data-bs-slide="prev"> <span class="carousel-control-prev-icon"
                         aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
-                    </button> <button class="carousel-control-next" type="button"
-
+                    </button> <button class="carousel-control-next" type="button"
                       data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Next</span> </button> </div>
                 </div>
-                <div class="modal-footer"> <button type="button" class="btn btn-secondary"
-
+                <div class="modal-footer"> <button type="button" class="btn btn-secondary"
                     data-bs-dismiss="modal">Close</button> </div>
               </div>
             </div>
@@ -229,20 +202,15 @@
         <div class="row my-5">
           <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <a id="skills"><img src="images/skills01.png"
-
+              <div class="carousel-item active"> <a id="skills"><img src="images/skills01.png"
                     class="d-block w-100" alt="skills"></a> </div>
-              <div class="carousel-item"> <img src="images/skills02.png" class="d-block w-100"
-
+              <div class="carousel-item"> <img src="images/skills02.png" class="d-block w-100"
                   alt="skills2"> </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
               data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span> </button> <button
-
-              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-
+              <span class="visually-hidden">Previous</span> </button> <button
+              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
               data-bs-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span> </button> </div>
         </div>
@@ -254,20 +222,14 @@
                 to top</button></a> </h1>
         </div>
         <div class="row pt-4 ps-5 footer" style="text-align: center;">
-          <div class="col md-4 xs-1" style="text-align: right;"><a href="https://youtube.com/@bbyproduction7582?si=kw6jf6k4a2b3ab2a"
-
-              target="_blank"><img src="images/social01.png" class="img-fluid circle"
-
+          <div class="col md-4 xs-1" style="text-align: right;"><a href="https://youtube.com/@bbyproduction7582?si=kw6jf6k4a2b3ab2a"
+              target="_blank"><img src="images/social01.png" class="img-fluid circle"
                 alt="youtube"></a></div>
-          <div class="col md-4 xs-1 mx-3"><a href="https://www.facebook.com/numnumzung"
-
-              target="_blank"><img src="images/social03.png" class="img-fluid circle"
-
+          <div class="col md-4 xs-1 mx-3"><a href="https://www.facebook.com/numnumzung"
+              target="_blank"><img src="images/social03.png" class="img-fluid circle"
                 alt="facebook"></a></div>
-          <div class="col md-4 xs-1" style="text-align: left;"><a href="https://instagram.com/naninunenorrr?igshid=YTQwZjQ0NmI0OA=="
-
-              target="_blank"><img src="images/social02.png" class="img-fluid circle"
-
+          <div class="col md-4 xs-1" style="text-align: left;"><a href="https://instagram.com/naninunenorrr?igshid=YTQwZjQ0NmI0OA=="
+              target="_blank"><img src="images/social02.png" class="img-fluid circle"
                 alt="instagram"></a></div>
           <address> </address>
           <address> </address>
@@ -279,10 +241,8 @@
           </div>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
       <script src="js/lightbox-plus-jquery.min.js"></script> </div>
   </body>
